quraan media player

--- a/app/src/main/res/layout/sura_list.xml
+++ b/app/src/main/res/layout/sura_list.xml
@@ -38,7 +38,7 @@
         </LinearLayout>
 
         <ListView
-            android:background="#aab6fe"
+            android:background="@drawable/quran"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/sura_list"
