--- a/app/src/main/res/layout/play_screen.xml
+++ b/app/src/main/res/layout/play_screen.xml
@@ -11,26 +11,6 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-        <LinearLayout
-            android:id="@+id/player_header_bg"
-            android:layout_width="fill_parent"
-            android:layout_height="60dip"
-            android:background="@layout/bg_player_header"
-            android:layout_alignParentTop="true"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:layout_weight="0">
-            <TextView
-                android:id="@+id/sura_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="#ffffff"
-                android:textSize="16dp"
-                android:textStyle="bold"
-                android:text="إسم السورة"
-                android:layout_marginTop="10dp"/>
-        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/suraThumbnail"
@@ -39,12 +19,12 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:gravity="center"
-            android:layout_weight="1"
-            android:layout_below="@id/player_header_bg">
+            android:layout_weight="1">
+
             <ImageView
-                android:layout_width="300dp"
-                android:layout_height="200dp"
-                android:src="@drawable/quran"/>
+                android:layout_width="422dp"
+                android:layout_height="648dp"
+                android:src="@drawable/quran" />
         </LinearLayout>
 
         <LinearLayout
@@ -125,8 +105,9 @@
 
         <SeekBar
             android:id="@+id/suraProgressBar"
-            android:layout_width="fill_parent"
+            style="?android:attr/progressBarStyleHorizontal"
             android:layout_height="wrap_content"
+            android:layout_width="match_parent"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginBottom="5dp"
